# qgis-badapple

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/utils/: VideoPlayer.py
